Fixed video year tab overflow,moved selector to top, updated about page

--- a/assets/css/talk-archives.css
+++ b/assets/css/talk-archives.css
@@ -123,7 +123,7 @@
 	overflow: hidden;
 }
 
-.tab button {
+.tablinks {
   	background-color: inherit;
 	font: Helvetica;
 	font-weight: 300;
@@ -136,11 +136,18 @@
 	font-size: 17px;
 }
 
-.tab button:hover {
+@media only screen and (max-width: 768px) {
+	.tablinks {
+		padding: 10px 12px;
+		font-size: 15px;
+	}
+}
+
+.tablinks:hover {
   	background-color: #A6A6A6;
 }
 
-.tab button.active {
+.tablinks.active {
   	background-color: #E62B1E;
 	color: white;
 }
